[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui_elements/main/main_ui.gd" type="Script" id=1]
[ext_resource path="res://ui_elements/size_selector/size_selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/wave.theme" type="Theme" id=3]
[ext_resource path="res://theme/bordered_panel.tres" type="StyleBox" id=4]

[node name="MainUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainUIContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 304.0
margin_bottom = 594.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sizes" type="PanelContainer" parent="MainUIContainer"]
margin_right = 298.0
margin_bottom = 33.0
custom_styles/panel = ExtResource( 4 )

[node name="SizeSelector" parent="MainUIContainer/Sizes" instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 29.0

[node name="Entries" type="PanelContainer" parent="MainUIContainer"]
margin_top = 37.0
margin_right = 298.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntryGridScroll" type="ScrollContainer" parent="MainUIContainer/Entries"]
margin_left = 6.0
margin_top = 4.0
margin_right = 292.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="ImageEntryList" type="VBoxContainer" parent="MainUIContainer/Entries/EntryGridScroll"]
margin_right = 286.0
margin_bottom = 485.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ICOGenButtons" type="HBoxContainer" parent="MainUIContainer"]
margin_top = 534.0
margin_right = 298.0
margin_bottom = 559.0

[node name="ImportICOGen" type="Button" parent="MainUIContainer/ICOGenButtons"]
margin_right = 147.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "IMPORT ICOGEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportICOGen" type="Button" parent="MainUIContainer/ICOGenButtons"]
margin_left = 151.0
margin_right = 298.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "EXPORT ICOGEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateICO" type="Button" parent="MainUIContainer"]
margin_top = 563.0
margin_right = 298.0
margin_bottom = 588.0
text = "GENERATE ICO FILE"

[connection signal="image_sizes_changed" from="MainUIContainer/Sizes/SizeSelector" to="." method="_on_SizeSelector_image_sizes_changed"]
